...
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" multipleTouchEnabled="YES" contentMode="left" insetsLayoutMarginsFromSafeArea="NO" text="View Contact Requests" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" id="SmS-bT-id6">
                                                    <rect key="frame" x="20" y="0.0" width="967.5" height="51.5"/>
                                                    <autoresizingMask key="autoresizingMask"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Add Contact" id="HYb-u1-ZN3">
                        <barButtonItem key="rightBarButtonItem" systemItem="camera" id="DDj-bI-xft" customClass="MLQR">
                            <connections>
...
                        <barButtonItem title="Next" width="69" id="PI2-N1-aLJ"/>
                        <barButtonItem style="plain" systemItem="flexibleSpace" id="tP2-59-Hnr"/>
                        <barButtonItem title="Done" style="done" id="TMS-52-ORP"/>
                    </items>
                </toolbar>
...
        <scene sceneID="NU1-8b-G5Q">
            <objects>
                <tableViewController storyboardIdentifier="activeVC" clearsSelectionOnViewWillAppear="NO" id="wDx-jI-G7L" userLabel="Chats" customClass="ActiveChatsViewController" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" id="oVe-va-MJW">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="1366"/>
...
                            <barButtonItem image="navigationLog" id="fYe-Jb-c0G"/>
                        </leftBarButtonItems>
                        <barButtonItem key="rightBarButtonItem" title="Compose" id="pyP-qb-mfr">
                            <connections>
                                <segue destination="hMh-kj-2DY" kind="presentation" identifier="showContacts" modalPresentationStyle="fullScreen" id="lBM-pO-Hdw"/>
...
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Contact Requests" id="GI8-WI-wYs"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dX7-sf-ltO" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
...
                    </tableView>
                    <navigationItem key="navigationItem" title="Star Message" id="k4P-eI-onZ">
                        <barButtonItem key="leftBarButtonItem" title="Close" id="iOL-tc-ZaX">
                            <connections>
                                <action selector="btnCloseBarButtonAction:" destination="Bfr-0X-aof" id="FJr-GM-1IP"/>
...
                            <rect key="frame" x="52" y="147" width="310" height="21"/>
                            <color key="backgroundColor" systemColor="secondarySystemBackgroundColor"/>
                            <accessibility key="accessibilityConfiguration" identifier="NewChatMessageTextField"/>
                            <color key="textColor" systemColor="labelColor"/>
                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
...
                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kYa-y4-X5Z" userLabel="SendButton">
                            <rect key="frame" x="370" y="137" width="36" height="30"/>
                            <accessibility key="accessibilityConfiguration" identifier="send" label="Send"/>
                            <constraints>
                                <constraint firstAttribute="width" constant="36" id="NRJ-Qj-1DA"/>
...
                        <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="p5g-C7-nvT" userLabel="AudioButton">
                            <rect key="frame" x="370" y="137" width="36" height="30"/>
                            <accessibility key="accessibilityConfiguration" identifier="microphone"/>
                            <constraints>
                                <constraint firstAttribute="height" constant="30" id="dpb-If-XvF"/>
...
                        </constraints>
                    </view>
                    <navigationItem key="navigationItem" title="Contacts" largeTitleDisplayMode="never" id="BED-oi-ZVB"/>
                    <connections>
                        <outlet property="btnAddUser" destination="qvr-vS-eGn" id="2uv-v0-vw2"/>
...
