...
                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nIY-Zh-Y3h" customClass="GLRoundedView">
                                                <rect key="frame" x="16" y="165" width="288" height="140"/>
                                                <subviews>
                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9rn-gF-7f0" customClass="GLCapsuleView">
                                                        <rect key="frame" x="32" y="8" width="224" height="46"/>
                                                        <subviews>
                                                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Username" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Tjb-kj-Z5d">
                                                                <rect key="frame" x="8" y="14" width="208" height="18.5"/>
                                                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                                                <textInputTraits key="textInputTraits" autocorrectionType="no" keyboardType="emailAddress"/>
                                                                <connections>
                                                                    <outlet property="delegate" destination="vXZ-lx-hvc" id="bPy-jN-pDj"/>
                                                                </connections>
...
                                                        <constraints>
                                                            <constraint firstAttribute="height" constant="46" id="Gce-jq-6n7"/>
                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="sK6-VN-5nb"/>
                                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="46" id="yKC-8D-Tfq"/>
                                                        </constraints>
                                                        <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                        <state key="normal" title="Verify">
                                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                            <color key="titleShadowColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                                        </state>
                                                        <connections>
                                                            <action selector="registerAccount:" destination="0z4-cM-T8Y" eventType="touchUpInside" id="q2J-Ro-c4X"/>
                                                        </connections>
...
                                    <constraint firstAttribute="height" constant="46" id="dT9-oS-siW"/>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="gcF-fD-BOL"/>
                                    <constraint firstAttribute="width" constant="279" id="iVV-bc-wRs"/>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="46" id="wwl-3i-Dx8"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="25"/>
                                <state key="normal" title="Start Chatting">
                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    <color key="titleShadowColor" red="0.0" green="0.0" blue="0.0" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                                </state>
                                <connections>
                                    <action selector="close:" destination="iOy-Fr-h6X" eventType="touchUpInside" id="Tcc-Cr-FTJ"/>
                                    <action selector="registerAccount:" destination="0z4-cM-T8Y" eventType="touchUpInside" id="hGn-Zo-aEl"/>
...
