...
            }
            break;
        }
        case kSettingSectionApp: {
            switch(indexPath.row) {
                case PrivacySettingsRow:
                    [cell initTapCell:NSLocalizedString(@"Privacy Settings", @"")];
                    break;
                case NotificationsRow:
                    [cell initTapCell:NSLocalizedString(@"Register Notifications", @"")];
                    break;
                case BackgroundsRow:
                    [cell initTapCell:NSLocalizedString(@"Backgrounds", @"")];
...
